name:               scraper-hs
version:            1.0
build-type:         Simple
cabal-version:      >= 1.20

executable scraper-hs
  main-is:            Main.hs
  default-language:   Haskell2010
  default-extensions: DataKinds,
                      DeriveGeneric,
                      OverloadedStrings,
                      TypeFamilies,
                      TypeOperators
  ghc-options:        -O2 -Wall -threaded -rtsopts
  build-depends:      base >= 4.7,
                      Cabal >= 1.20,
                      transformers,
                      aeson >= 0.8.0.2,
                      text >= 1.2,
                      scotty >= 0.9.1,
                      hxt >= 9.3,
                      http-conduit >= 2.1.5,
                      containers,
                      parallel-io >= 0.3,
                      bytestring >= 0.10
