name:               venweb
version:            1.0
build-type:         Simple
cabal-version:      >= 1.22

executable venweb
  main-is:            Main.hs
  default-language:   Haskell2010
  default-extensions: DataKinds,
                      DeriveGeneric,
                      OverloadedStrings,
                      TypeFamilies,
                      TypeOperators
  ghc-options:        -O2 -Wall -threaded -rtsopts
  build-depends:      base >= 4.7,
                      transformers,
                      aeson >= 0.9.0.0,
                      text >= 1.2,
                      scotty >= 0.9.1,
                      wai-middleware-static >= 0.6,
                      hxt >= 9.3,
                      http-conduit >= 2.1.5,
                      containers,
                      parallel-io >= 0.3,
                      bytestring >= 0.10,
                      http-types >= 0.8.5,
                      data-default >= 0.5,
                      network >= 2.6.0.2
